# libdsp

./: .clang-tidy  README.md  meson.build  meson_options.txt
examples/: crop.cpp  delay-digital-signal.cpp  derivative.cpp  meson.build  minimizer-maximizer.cpp  moving-average.cpp  pid.cpp  rate-limiter.cpp
examples/chebyshev/: meson.build  percent-ripple.cpp  pole-count.cpp
examples/windowed-sinc/: meson.build  sample-count.cpp  window-type.cpp
include/dsp/: crop.hpp  delay-digital-signal.hpp  derivative.hpp  integral.hpp  math.hpp  maximizer.hpp  minimizer.hpp  partial-linear-map.hpp  pid.hpp  rate-limiter.hpp
include/dsp/filter/: all-pass.hpp  chebyshev.hpp  convolution.hpp  moving-average.hpp  recursive.hpp  windowed-sinc.hpp
include/dsp/math/: cos.hpp  exp.hpp  get-pi.hpp  ln.hpp  pow.hpp  sin.hpp  sqrt.hpp  square.hpp  tan.hpp
include/dsp/utils/: frequency-response.hpp
include/dsp/window/: blackman.hpp  hamming.hpp  none.hpp
include/dsp/windup/: bound.hpp  none.hpp
scripts/: plot-stdin.py
source/: test-filters.cpp
tests/: meson.build
tests/dsp/: crop.cpp  delay-digital-signal.cpp  derivative.cpp  integral.cpp  meson.build  partial-linear-map.cpp  rate-limiter.cpp
tests/dsp/filter/: all-pass.cpp  chebyshev.cpp  convolution.cpp  meson.build  moving-average.cpp  recursive.cpp  windowed-sinc.cpp
