subdir('windowed-sinc')

executable('example-crop', ['crop.cpp'],
    include_directories: libdsp_include,
)

executable('example-delay-digital-signal', ['delay-digital-signal.cpp'],
    include_directories: libdsp_include,
)

executable('example-rate-limiter', ['rate-limiter.cpp'],
    include_directories: libdsp_include,
)