test('dsp/filter/all-pass',
    executable('test-all-pass', ['all-pass.cpp'],
        include_directories: libdsp_include,
    )
)

test('dsp/filter/chebyshev',
    executable('test-chebyshev', ['chebyshev.cpp'],
        include_directories: libdsp_include,
    )
)

test('dsp/filter/convolution',
    executable('test-convolution', ['convolution.cpp'],
        include_directories: libdsp_include,
    )
)

test('dsp/filter/moving-average',
    executable('test-moving-average', ['moving-average.cpp'],
        include_directories: libdsp_include,
    )
)

test('dsp/filter/recursive',
    executable('test-recursive', ['recursive.cpp'],
        include_directories: libdsp_include,
    )
)

test('dsp/filter/windowed-sinc',
    executable('test-windows-sinc', ['windowed-sinc.cpp'],
        include_directories: libdsp_include,
    )
)